<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/communityConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".communityPatternPage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gameModeIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pattern_mode_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gameModeIcon"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/authorNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/gameModeIcon"
        app:layout_constraintTop_toBottomOf="@id/nameView" />

    <LinearLayout
        android:id="@+id/buttonBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeIcon">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/patternDeleteButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/patternDownloadButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/download"
            style="@style/Widget.MaterialComponents.Button"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/patternGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBarLayout">

        <FrameLayout
            android:transitionName="tframe_C"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImageC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/TileC"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxtC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_D"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImageD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/TileD"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxtD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_E"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImageE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/TileE"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxtE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImage9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile9"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_A"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImageA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/TileA"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_B"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImageB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/TileB"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImage6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile6"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImage7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile7"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/patternImage8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile8"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/patternImage3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile3"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/patternImage4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile4"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:transitionName="tframe_5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/patternImage5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Tile5"
                android:src="@drawable/box"
                android:tintMode="multiply" />

            <TextView
                android:id="@+id/patternTxt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </FrameLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>